@@ -16,6 +16,7 @@ documents those changes that are of interest to users and administrators.
  -- Add missing fed_job_info jobs if fed state is lost.
  -- Do not build cgroup plugins on FreeBSD or NetBSD, and use proctrack/pgid
     by default instead.
+ -- Do not build switch/cray_aries plugin on FreeBSD, NetBSD, or macOS.
 
 * Changes in Slurm 19.05.1-2
 ============================
